# aria

./: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
components/: ap.py  llm.py  llm_connect_llmstudio.py  llm_connect_local.py  llm_connect_openai.py  login_ui.py  mcp.py  mcp_manager.py  stt copy.py  stt.py  tts.py  tts_server.py  tts_sherpa_onnx.py  ui.py  utils.py  vad.py
configs/: default.json
static/: vad-processor.js
tools/: weather_server.py
