[project]
name = "aria2"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.6.0",
    "transformers==4.46.2",
    "numpy==1.26.4",
    "gradio", # À ajouter pour ta nouvelle interface
    "onnxruntime==1.20.1",
    "pyaudio==0.2.14",
    "kokoro==0.7.3",
    "coqui-tts==0.25.3",
    "opuslib==3.0.1",
    # Pour llama-cpp, uv peut installer la whl directe :
    "llama-cpp-python==0.3.4; sys_platform == 'win32'",
    "pydub>=0.25.1",
]

[tool.uv.sources]
# On définit la source spécifique pour Linux, mais on laisse uv chercher la version standard pour Windows
llama-cpp-python = { url = "https://github.com/abetlen/llama-cpp-python/releases/download/v0.3.4-cu124/llama_cpp_python-0.3.4-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
